7.25.0 (28-11-2025)
- Refactor: Move ServiceRequestDataProvider from fenixedu-qub-docs to fenixedu-ulisboa-specifications [#qubIT-Fenix-6552]

7.24.15 (26-11-2025)
- Refactor: Move some properties and methods from ITreasuryBridgeAPI [#qubIT-Fenix-6552]

7.24.14 (19-11-2025)
- Bug fix: Prevent exception when conclusion bean is null [#UL-IE-1832]
- Bug fix: Prevent exception when degree module conclusion title is not defined [#UL-FM-3366]

7.24.13 (14-11-2025)
- Refactor: Refactor conclusion information provider to replace extended degree info hardcoded fields with dynamic fields [#qubIT-Fenix-6512]
- Refactor: Fill CourseGroupDegreeInfo from registration conclusions [#UL-FBA-2061]

7.24.11 (23-10-2025)
- Refactor: Remove deprecated extended degree info controllers [#qubIT-Fenix-7466]
- Refactor: Refactors MarkSheetSettings to allow multiple instances [#qubIT-Fenix-7005]

7.24.10 (04-08-2025)
- Refactor: Moves RegistrationDgesStateBean to customers-ulisboa [#qubIT-Fenix-6559]
- Refactor: Removes unused FirstTimeCandidacyDocumentsController endpoint [#qubIT-Fenix-6559]

7.24.9 (11-07-2025)
- Refactor: Remove references for CandidaciesExtensionsResources [#qubIT-Fenix-3172]

7.24.8 (08-07-2025)
- Refactor: Refactors RegistrationDGESStateBean and IngressionServices to handle new entities EducationLevelType, ProfessionCategoryType, ProfessionalStatusType [#qubIT-Fenix-7009]

7.24.7 (04-07-2025)
- Refactor: Moves StudentCandidacy fields to Registration [#qubIT-Fenix-6559]

7.24.6 (12-06-2025)
- Refactor: Remove StudentCandidacy#ExecutionDegree references [#qubIT-Fenix-6559]
- Refactor: Remove dependency of StudentCandidacy from StudentActive algorithm [#qubIT-Fenix-6559]

7.24.5 (24-02-2025)
- Refactor: Move PrecedentDegreeInformation relations from the StudentCandidacy to Registration [#qubIT-Fenix-6617]

7.24.4 (19-02-2025)
- Refactor: Removes unused viewRegistrationDetailsTreasuryDebtAccountLink_ulisboa_specification [#qubIT-Fenix-6559]